HTTP_Routing/2.30_HTTPCORS_OriginsCredentials/gw-http-route-f1.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: http-gw
  namespace: web
spec:
  gatewayClassName: f5-bnk-gateway-class

  addresses:
    - type: IPAddress
      value: 40.30.20.20

  listeners:
    - name: bnk-listener
      protocol: HTTP
      port: 80

      allowedRoutes:
        namespaces:
          from: All

        kinds:
          - kind: HTTPRoute

---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: cors-origins-credentials-route
  namespace: web
spec:
  parentRefs:
    - name: http-gw
      sectionName: bnk-listener

  hostnames:
    - coffee.f5bnk.com

  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /creds

      filters:
        - cors:
            allowOrigins:
              - https://shop.f5bnk.com
            allowCredentials: true
          type: CORS

      backendRefs:
        - name: coffee-pool
          kind: Pool
          group: k8s.f5net.com

    - matches:
        - path:
            type: PathPrefix
            value: /any

      filters:
        - cors:
            allowOrigins:
              - "*"
            allowCredentials: false
          type: CORS

      backendRefs:
        - name: coffee-pool
          kind: Pool
          group: k8s.f5net.com

    - matches:
        - path:
            type: PathPrefix
            value: /wild

      filters:
        - cors:
            allowOrigins:
              - https://*.f5bnk.com
            allowCredentials: false
          type: CORS

      backendRefs:
        - name: coffee-pool
          kind: Pool
          group: k8s.f5net.com
