HTTP_Routing/2.30_HTTPCORS_OriginsCredentials/gw-http-route_iRule.yaml
# 2.30 iRule 우회. native type: CORS 미적용. 카탈로그 고정 ACAO 가 아니라 path별 allowlist.
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: http-gw
  namespace: web
spec:
  gatewayClassName: f5-bnk-gateway-class
  addresses:
    - type: IPAddress
      value: 40.30.20.20
  listeners:
    - name: bnk-listener
      protocol: HTTP
      port: 80
      allowedRoutes:
        namespaces:
          from: All
        kinds:
          - kind: HTTPRoute
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: cors-origins-credentials-irule-route
  namespace: web
spec:
  parentRefs:
    - name: http-gw
      sectionName: bnk-listener
  hostnames:
    - coffee.f5bnk.com
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /creds
      backendRefs:
        - name: coffee-pool
          kind: Pool
          group: k8s.f5net.com
    - matches:
        - path:
            type: PathPrefix
            value: /any
      backendRefs:
        - name: coffee-pool
          kind: Pool
          group: k8s.f5net.com
    - matches:
        - path:
            type: PathPrefix
            value: /wild
      backendRefs:
        - name: coffee-pool
          kind: Pool
          group: k8s.f5net.com
